final edits from githubio repo

--- a/Home/index.html
+++ b/Home/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Latitude Analysis Dashboard</title>
+  <link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!--  Link to Bootstrap version 3  -->
@@ -12,7 +13,6 @@
 <script src="https://kit.fontawesome.com/2e362d4438.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
 
 
 <!-- Navigation bar -->
@@ -53,7 +53,7 @@
       <div class="jumbotron">
         <h1><i class="fas fa-temperature-high"></i> Summary: Weather and Latitude </h1>
         <hr/>
-        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph">
+        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph" title="Latitude vs Temp graph">
         <h2>Objective:</h2>
         <p>Created a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator. Additionally, utilized a Python library and the OpenWeatherMap API to create a representative model of weather across world cities. </p>
 
@@ -78,11 +78,6 @@
 		</div>
   </div>
 </div>
-
-
-
-
-
 
 
 <!-- Link to jquery -->
