--- a/Comparison/comparison.html
+++ b/Comparison/comparison.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Weather Comparison</title>
+  <link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!-- 	Link to Bootstrap version 3  -->
@@ -48,40 +49,31 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-      		<div class="jumbotron">
+      	<div class="jumbotron">
         		<h1><i class="fas fa-compress-arrows-alt"></i> Weather Comparison: Weather and Latitude</h1>
         		<hr/>
         		<p> Click any plot to see further analysis</p>
-        <div id="pcomp" class="col-md-6 col-md-12">
+          <div id="pcomp" class="col-md-6 col-sm-12">
         		<p>Latitude vs. Maximum Temperature</p>
         		<a href="https://diannejardinez.github.io/Plots/plot_maxtemp.html" target="_blank">
 			     	<img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph" title="Latitude vs Temp graph"></a>
-		<div id="compp" class="col-md-6 col-md-12">
+		      <div id="compp" class="col-md-6 col-sm-12">
 			    <p>Latitude vs. Humidity</p>
         		<a href="https://diannejardinez.github.io/Plots/plot_humidity.html" target="_blank">
 			     	<img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig2.png?raw=true" alt="Latitude vs Humidity graph" title="Latitude vs Humidity graph"></a>
 		</div>
 	</div>
 	<div class="row">
-        <div id="pcomp" class="col-md-6 col-md-12">
-			    <p>Latitude vs. Cloudiness</p>
-        		<a href="https://diannejardinez.github.io/Plots/plot_cloudiness.html" target="_blank">
-			     	<img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig3.png?raw=true" alt="Latitude vs Cloudiness graph" title="Latitude vs Cloudiness graph"></a>
-			    <p>Latitude vs. Wind speed</p>
-        		<a href="https://diannejardinez.github.io/Plots/plot_windspeed.html" target="_blank">
-			     	<img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig4.png?raw=true" alt="Latitude vs Wind speed graph" title ="Latitude vs Wind speed graph"></a>
+    <div id="pcomp" class="col-md-6 col-sm-12">
+			  <p>Latitude vs. Cloudiness</p>
+        <a href="https://diannejardinez.github.io/Plots/plot_cloudiness.html" target="_blank">
+			  <img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig3.png?raw=true" alt="Latitude vs Cloudiness graph" title="Latitude vs Cloudiness graph"></a>
+			  <p>Latitude vs. Wind speed</p>
+        <a href="https://diannejardinez.github.io/Plots/plot_windspeed.html" target="_blank">
+			  <img id="visualcomp" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig4.png?raw=true" alt="Latitude vs Wind speed graph" title ="Latitude vs Wind speed graph"></a>
 		</div>
 	</div>
 </div>
-
-
-
-
-
-
-
-
-
 
 
 
