--- a/Plots/plot_cloudiness.html
+++ b/Plots/plot_cloudiness.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Cloudiness (%) vs. Latitude</title>
+<link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!--  Link to Bootstrap version 3  -->
@@ -27,8 +28,8 @@
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret"></span></a>
+          <li class="dropdown active" >
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret sr-only">(current)</span></a>
               <ul class="dropdown-menu">
                 <li><a href="https://diannejardinez.github.io/Plots/plot_maxtemp.html" target="_blank">Maximum Temperature</a></li>
                 <li><a href="https://diannejardinez.github.io/Plots/plot_humidity.html" target="_blank">Humidity</a></li>
@@ -52,9 +53,9 @@
         <h1><i class="fas fa-cloud"></i> Cloudiness (%) vs. Latitude</h1>
         <h2>Findings and Observations</h2>
         <hr/>
-        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig3.png?raw=true" alt="Latitude vs Cloudiness graph">
-        <p>Data shows that there are pockets where there is a maximum percent of cloudiness and zero percent of cloudiness.</p>
-        <p>About 0 percent of clouds were areas with a 20° to 60° latitude range and high maximum cloudiness percent were areas with -20° to 0° and 40° to 70° latitude range.</p>
+        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig3.png?raw=true" alt="Latitude vs Cloudiness graph" title="Latitude vs Cloudiness graph">
+        <p>Data shows that there was a weak to no correlation between Latitude coordinates and Cloudiness however there are pockets where there is a hundred percent of cloudiness and zero percent of cloudiness at certain latitudes.</p>
+        <p>About zero percent of clouds were areas with a 20° to 60° latitude range and a hundred percent of clouds were areas with -20° to 0° and 40° to 70° latitude range.</p>
       </div>
     </div>
 
