--- a/Plots/plot_humidity.html
+++ b/Plots/plot_humidity.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Humidity (%) vs. Latitude</title>
+<link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!--  Link to Bootstrap version 3  -->
@@ -27,8 +28,8 @@
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret"></span></a>
+          <li class="dropdown active" >
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret sr-only">(current)</span></a>
               <ul class="dropdown-menu">
                 <li><a href="https://diannejardinez.github.io/Plots/plot_maxtemp.html" target="_blank">Maximum Temperature</a></li>
                 <li><a href="https://diannejardinez.github.io/Plots/plot_humidity.html" target="_blank">Humidity</a></li>
@@ -52,17 +53,17 @@
 		<h1><i class="fas fa-smog"></i> Humidity (%) vs. Latitude</h1>
         <h2>Findings and Observations</h2>
         <hr/>
-        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig2.png?raw=true" alt="Latitude vs Humidity graph">
+        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig2.png?raw=true" alt="Latitude vs Humidity graph" title="Latitude vs Humidity graph">
         <p>Data shows that there was a weak to no correlation or
          no strong relationship visible regarding Humidity and Latitude even when just the Northern and Southern Hemisphere were observed.</p>
 
         <p> There seemed to be more datapoints in the Northern Hemisphere as opposed to the Southern Hemisphere but it may be due to the random set of cities when this analysis was pulled or there may be more cities in the Northern Hemisphere</p>
-        <img id= "mainvisual_humid" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig7.png?raw=true" alt="Northern Hemisphere vs Humidity graph">
-        <img id= "mainvisual_humid" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig8.png?raw=true" alt="Southern Hemisphere vs Humidity graph">
+        <img id= "mainvisual_humid" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig7.png?raw=true" alt="Northern Hemisphere vs Humidity graph" title="Northern Hemisphere vs Humidity graph">
+        <img id= "mainvisual_humid" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig8.png?raw=true" alt="Southern Hemisphere vs Humidity graph" title="Southern Hemisphere vs Humidity graph">
         
         
-      </div>
     </div>
+  </div>
 
     <div class="col-md-5">
       <div class="jumbotron">
