--- a/Plots/plot_maxtemp.html
+++ b/Plots/plot_maxtemp.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Temperature (F) vs. Latitude</title>
+  <link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!--  Link to Bootstrap version 3  -->
@@ -27,8 +28,8 @@
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret"></span></a>
+          <li class="dropdown active" >
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret sr-only">(current)</span></a>
               <ul class="dropdown-menu">
                 <li><a href="https://diannejardinez.github.io/Plots/plot_maxtemp.html" target="_blank">Maximum Temperature</a></li>
                 <li><a href="https://diannejardinez.github.io/Plots/plot_humidity.html" target="_blank">Humidity</a></li>
@@ -52,8 +53,9 @@
       <div class="jumbotron">
         <h1><i class="fas fa-temperature-high"></i> Temperature (F) vs. Latitude</h1>
         <h2>Findings and Observations</h2>
-        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph">
-        <p>There is a strong to moderate correlation between Latitude coordinates and Temperature. The closer to the equator(0°) the higher the temperature, the further away from the equator temperature decreases.</p>
+        <hr/>
+        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph" title="Latitude vs Temp graph">
+        <p>There is a strong to moderate correlation between Latitude coordinates and Temperature. The closer to the equator(0°) the temperature increase, the further away from the equator the temperature decreases.</p>
       </div>
     </div>
 
