--- a/Plots/plot_windspeed.html
+++ b/Plots/plot_windspeed.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Wind Speed (mph) vs. Latitude</title>
+  <link rel="icon" href="https://img.icons8.com/all/500/globe.png">
 <!-- Link to Google Font link for text font -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 <!--  Link to Bootstrap version 3  -->
@@ -51,7 +52,8 @@
       <div class="jumbotron">
         <h1><i class="fas fa-wind"></i> Wind Speed (mph) vs. Latitude</h1>
         <h2>Findings and Observations</h2>
-        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig4.png?raw=true" alt="Latitude vs Wind speed graph">
+        <hr/>
+        <img id= "mainvisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig4.png?raw=true" alt="Latitude vs Wind speed graph" title="Latitude vs Wind speed graph">
         <p>There was a weak to no correlation between Latitude coordinate and Wind Speed. However, there was an outlier that had the maximum wind speed which was Lakselv, Norway at around 70° latitude for the random data set that included this data point in the Northern Hemisphere.</p>
   
       </div>
