--- a/Web-Visualization-Dashboard/Home/index.html
+++ b/Web-Visualization-Dashboard/Home/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <li class ="active"><a class="navbar-brand" href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
+      <li class ="active"><a class="navbar-brand" href="https://github.com/diannejardinez/Web-Design-Challenge/Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
