--- a/Web-Visualization-Dashboard/Plots/plot_cloudiness.html
+++ b/Web-Visualization-Dashboard/Plots/plot_cloudiness.html
@@ -9,7 +9,7 @@
   <!--  Link to Bootstrap version 3  -->
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Link to customized stylesheet -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="../Home/style.css">
   <!-- Link to FontAwesome Icons -->
   <script src="https://kit.fontawesome.com/2e362d4438.js" crossorigin="anonymous"></script>
 </head>
