--- a/Web-Visualization-Dashboard/Home/index.html
+++ b/Web-Visualization-Dashboard/Home/index.html
@@ -25,14 +25,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <li class ="active"><a class="navbar-brand" href="https://github.com/diannejardinez/Web-Design-Challenge/Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
+      <li class ="active"><a class="navbar-brand" href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Plots <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_maxtemp.html" target="_blank">Maximum Temperature</a></li>
+                <li><a href="../Plots/plot_maxtemp.html" target="_blank">Maximum Temperature</a></li>
                 <li><a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_humidity.html" target="_blank">Humidity</a></li>
                 <li><a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_cloudiness.html" target="_blank">Cloudiness</a></li>
                 <li><a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_windspeed.html" target="_blank">Wind Speed</a></li>
