--- a/Web-Visualization-Dashboard/Home/index.html
+++ b/Web-Visualization-Dashboard/Home/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <li class ="active"><a class="navbar-brand" href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
+      <li class ="active"><a class="navbar-brand" href="../Home/index.html"><i class="fas fa-globe-americas"></i> Latitude Analysis Dashboard</a><span class="sr-only">(current)</span></li>
     </div>  
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
@@ -65,13 +65,13 @@
       <div class="jumbotron">
         <h1><i class="fas fa-binoculars"></i> Visualizations</h1>
         <hr/>
-        <a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_maxtemp.html" target="_blank">
+        <a href="../Plots/plot_maxtemp.html" target="_blank">
 			     <img id="sidevisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig1.png?raw=true" alt="Latitude vs Temp graph" title="Latitude vs Temp graph"></a>
-        <a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_humidity.html" target="_blank">
+        <a href="../Plots/plot_humidity.html" target="_blank">
 			     <img id="sidevisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig2.png?raw=true" alt="Latitude vs Humidity graph" title="Latitude vs Humidity graph"></a>
-        <a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_cloudiness.html" target="_blank">
+        <a href="../Plots/plot_cloudiness.html" target="_blank">
 			     <img id="sidevisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig3.png?raw=true" alt="Latitude vs Cloudiness graph" title="Latitude vs Cloudiness graph"></a>
-        <a href="https://diannejardinez.github.io/Web-Visualization-Dashboard/Plots/plot_windspeed.html" target="_blank">
+        <a href="../Plots/plot_windspeed.html" target="_blank">
 			     <img id="sidevisual" src="https://github.com/diannejardinez/API-Challenge/blob/master/output_data/fig4.png?raw=true" alt="Latitude vs Wind speed graph" title ="Latitude vs Wind speed graph" ></a>
           <p><br><br>Click any plot to see further analysis</p>
       </div>
