--- a/Web-Visualization-Dashboard/Home/index.html
+++ b/Web-Visualization-Dashboard/Home/index.html
@@ -60,7 +60,8 @@
         <p> Then built a series of scatter plots with Matplotlib to showcase the following relationships: Temperature (F) vs. Latitude, Humidity (%) vs. Latitude, Cloudiness (%) vs. Latitude, and Wind Speed (mph) vs. Latitude. </p>
       </div>
     </div>
-
+    
+<!-- Visualizations -->
 		<div class="col-md-5">
       <div class="jumbotron">
         <h1><i class="fas fa-binoculars"></i> Visualizations</h1>
